--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -2,42 +2,43 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/register_scroll_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:background="#FFFFFF">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/main_register_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="24dp">
+        android:padding="24dp"
+        android:paddingBottom="40dp"> <LinearLayout
+        android:id="@+id/register_header_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="64dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-        <LinearLayout
-            android:id="@+id/register_header_container"
+        <TextView
+            android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="64dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            android:text="Create New Account"
+            android:textColor="#000000"
+            android:textSize="24sp"
+            android:fontFamily="sans-serif-black"
+            android:letterSpacing="0.15"
+            android:textAllCaps="true" />
 
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Create New Account"
-                android:textColor="#000000"
-                android:textSize="24sp"
-                android:fontFamily="sans-serif-black"
-                android:letterSpacing="0.15"
-                android:textAllCaps="true" />
-
-            <View
-                android:layout_width="35dp"
-                android:layout_height="3dp"
-                android:layout_marginTop="4dp"
-                android:background="#FF4081" />
-        </LinearLayout>
+        <View
+            android:layout_width="35dp"
+            android:layout_height="3dp"
+            android:layout_marginTop="4dp"
+            android:background="#FF4081" />
+    </LinearLayout>
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/register_IV_profile"
@@ -186,12 +187,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:orientation="horizontal"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="32dp"
             app:layout_constraintTop_toBottomOf="@id/btn_register"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
-
+            app:layout_constraintEnd_toEndOf="parent">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
