--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,32 +13,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="24dp"
-        android:paddingBottom="40dp"> <LinearLayout
-        android:id="@+id/register_header_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="64dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:paddingBottom="40dp">
 
-        <TextView
-            android:id="@+id/tv_title"
+        <LinearLayout
+            android:id="@+id/register_header_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Create New Account"
-            android:textColor="#000000"
-            android:textSize="24sp"
-            android:fontFamily="sans-serif-black"
-            android:letterSpacing="0.15"
-            android:textAllCaps="true" />
+            android:orientation="vertical"
+            android:layout_marginTop="64dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
-        <View
-            android:layout_width="35dp"
-            android:layout_height="3dp"
-            android:layout_marginTop="4dp"
-            android:background="#FF4081" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tv_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Create New Account"
+                android:textColor="#000000"
+                android:textSize="24sp"
+                android:fontFamily="sans-serif-black"
+                android:letterSpacing="0.15"
+                android:textAllCaps="true" />
+
+            <View
+                android:layout_width="35dp"
+                android:layout_height="3dp"
+                android:layout_marginTop="4dp"
+                android:background="#FF4081" />
+        </LinearLayout>
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/register_IV_profile"
@@ -76,7 +78,6 @@
             app:cardCornerRadius="30dp"
             app:cardElevation="4dp"
             app:layout_constraintTop_toBottomOf="@id/tv_add_photo_label">
-
             <EditText
                 android:id="@+id/et_username"
                 android:layout_width="match_parent"
@@ -95,7 +96,6 @@
             app:cardCornerRadius="30dp"
             app:cardElevation="4dp"
             app:layout_constraintTop_toBottomOf="@id/card_username">
-
             <EditText
                 android:id="@+id/et_email"
                 android:layout_width="match_parent"
@@ -114,7 +114,6 @@
             app:cardCornerRadius="30dp"
             app:cardElevation="4dp"
             app:layout_constraintTop_toBottomOf="@id/card_email">
-
             <EditText
                 android:id="@+id/et_password"
                 android:layout_width="match_parent"
@@ -133,7 +132,6 @@
             app:cardCornerRadius="30dp"
             app:cardElevation="4dp"
             app:layout_constraintTop_toBottomOf="@id/card_password">
-
             <EditText
                 android:id="@+id/et_retype_password"
                 android:layout_width="match_parent"
@@ -171,12 +169,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <ProgressBar
-            android:id="@+id/register_PB_loading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/register_animation"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:visibility="gone"
             android:elevation="10dp"
+            app:lottie_rawRes="@raw/loading_fashion"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
